--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngrx/effects": "^8.2.14",
     "@ngrx/store": "^8.2.14",
     "bootstrap": "^3.3.7",
     "rxjs": "6.4.0",
