--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ngrx/effects": "^8.2.14",
+    "@ngrx/router-store": "^8.2.0",
     "@ngrx/store": "^8.2.14",
     "bootstrap": "^3.3.7",
     "rxjs": "6.4.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@ngrx/store-devtools": "^8.2.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
